Fix the z-index of the lightbox so it cover all the other elements.
Before, there was conflict between the lightbox and the .rover
elements because of the h3's position: sticky

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,7 @@ Creation date: 11/08/2019 18:46
   width: 100%;
   height: 100%;
   background-color: #121212;
+  z-index: 100;
 }
 
 .lightbox--is-closed {
